# personal-policy-manager

./: .env.example  .gitignore  RAG_PIPELINE_OVERVIEW.md  README.md  README_IMPLEMENTATION.md  batch_manager.py  data_ingestion.py  demo_results_20251024_144018.json  docker-compose.yml  document_processor.py  evaluation_results_20251024_142030.json  evaluation_results_enhanced_20251024_144550.json  main.py  package-lock.json  pdf_extractor.py  query_processor.py  report.md  requirements.txt  test_deepreaeach.py  test_gemini.py  test_runner.py  unique_results_cache_fixed.json  user_1_batch.txt  user_profile.json  user_profile_basic.json
.github/: copilot-instructions.md
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/config/: optimization_settings.py
backend/app/core/: document_processor.py  query_processor.py  query_processor_optimized.py  setup_batch.py
backend/app/src/: helper_query.py  response_analyzer.py
backend/app/utils/: file_handlers.py  inspect_batch.py  reranker.py  test_ingestion.py
backend/scripts/: evaluate_ablation.py  evaluate_rag.py  visualize_ablation.py
backend/tests/: test_deepreaeach.py  test_gemini.py
batches/: batch_registry.json
config/: __init__.py  settings.py
docs/: logs.md
frontend/: Dockerfile  README.md  package.json
frontend/src/: main.jsx
frontend/src/components/: MessageFormatter.jsx  PolicyInfo.jsx
react-ui/: README.md  index.html  package-lock.json  package.json  styles.css
react-ui/src/: App.jsx  styles.css
react-ui/src/components/: Auth.jsx  Chat.jsx  CustomerLayout.jsx  FileDisplayList.jsx  FileDropzone.jsx  InsurerLayout.jsx  MessageFormatter.jsx  PolicyInfo.jsx  PolicyTiers.jsx  ProfileForm.jsx  Sidebar.jsx  Upload.jsx  UploadedFiles.jsx
react-ui/src/components/Insurer/: CustomerChat.jsx  CustomerDashboard.jsx  CustomerDocuments.jsx  CustomerList.jsx  CustomerPolicyInfo.jsx  CustomerProfile.jsx  (+2 more)
react-ui/src/services/: api.js
research/: __init__.py  deep_research.py  deep_research_core.py  prompt.py
research/ai/: providers.py  providers_gemini.py
scripts/: README.md  compare_results.py  evaluate_rag.py  query_once.py
src/: api.py  deep_research.py  feedback.py  helper_query.py  intent_analyzer.py  prompt.py  response_analyzer.py  run.py  run_ui.py
src/ai/: providers.py  text_splitter.py
src/backend/: pyproject.toml
src/backend/app/: main.py
src/backend/app/config/: settings.py
src/backend/app/core/: batch_manager.py  document_processor.py  query_processor.py
src/backend/app/src/: __init__.py  deep_research.py  run_integrate.py
src/backend/scripts/: evaluate_comparison.py
src/frontend/: .env.example  package-lock.json  pnpm-lock.yaml
tests/: test_queries_demo.py  test_queries_enhanced.py
tests/data/: golden_dataset.json
utils/: __init__.py  embeddings.py  file_handlers.py  fusion.py  inspect_batch.py  pdf_extractor.py  search.py
(+7 files in other folders)
