[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "personal-policy-manager-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.2",
    "aiosignal==1.4.0",
    "annotated-types==0.7.0",
    "anyio==4.11.0",
    "attrs==25.4.0",
    "azure-ai-formrecognizer==3.3.3",
    "azure-common==1.1.28",
    "azure-core==1.36.0",
    "black==25.9.0",
    "blinker==1.9.0",
    "cachetools==6.2.1",
    "camelot-py>=0.11.0",
    "certifi==2025.10.5",
    "cffi==2.0.0",
    "chardet==5.2.0",
    "charset-normalizer==3.4.4",
    "click==8.3.0",
    "cryptography==46.0.3",
    "datasets>=4.4.1",
    "distro==1.9.0",
    "et-xmlfile==2.0.0",
    "faiss-cpu==1.12.0",
    "flask==3.1.2",
    "flask-cors==6.0.1",
    "flask-jwt-extended==4.7.1",
    "flask-sqlalchemy==3.1.1",
    "frozenlist==1.8.0",
    "google-api-core==2.28.1",
    "google-auth==2.43.0",
    "google-cloud-documentai==3.7.0",
    "google-genai>=1.55.0",
    "googleapis-common-protos==1.72.0",
    "grpcio==1.76.0",
    "grpcio-status==1.76.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.11",
    "isodate==0.7.2",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "jiter==0.11.1",
    "langchain-openai>=1.0.3",
    "lxml==6.0.2",
    "markupsafe==3.0.3",
    "msrest==0.7.1",
    "multidict==6.7.0",
    "mypy-extensions==1.1.0",
    "numpy==2.2.4",
    "oauthlib==3.3.1",
    "openai==2.6.1",
    "opencv-python-headless==4.12.0.88",
    "openpyxl==3.1.5",
    "packaging>=25.0",
    "pandas==2.2.2",
    "pathspec==0.12.1",
    "pdfminer-six==20231228",
    "pdfplumber==0.11.2",
    "pillow==12.0.0",
    "platformdirs==4.5.0",
    "propcache==0.4.1",
    "proto-plus==1.26.1",
    "protobuf>=6.33.5",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pycparser==2.23",
    "pydantic==2.12.3",
    "pydantic-core==2.41.4",
    "pyjwt==2.10.1",
    "pymupdf==1.26.6",
    "pymupdf4llm==0.1.9",
    "pypdf>=6.6.2",
    "pypdf2==3.0.1",
    "pypdfium2==5.0.0",
    "python-dateutil==2.9.0.post0",
    "python-docx==1.2.0",
    "python-dotenv==1.2.1",
    "pytokens==0.2.0",
    "pytz==2025.2",
    "ragas>=0.3.9",
    "rank-bm25==0.2.2",
    "regex==2025.11.3",
    "requests==2.32.5",
    "requests-oauthlib==2.0.0",
    "rsa==4.9.1",
    "scipy>=1.9.0",
    "sentence-transformers>=2.2.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.44",
    "tabulate==0.9.0",
    "tavily==1.1.0",
    "tiktoken==0.12.0",
    "tqdm==4.67.1",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "werkzeug==3.1.3",
    "yarl==1.22.0",
]

[tool.setuptools.packages.find]
include = ["app*"]
